# python-ddd-seedwork

./: .gitignore  README.md  mypy.ini  package.json  pyproject.toml  pytest.ini
dino_seedwork_be/: __init__.py  exceptions.py
dino_seedwork_be/adapters/: IRepository.py  IRepositoryUUID.py  __init__.py  dto.py  logger.py  repository.py  rest.py
dino_seedwork_be/adapters/logger/: AbstractLogger.py  SimpleLogger.py  __init__.py
dino_seedwork_be/adapters/messaging/: __init__.py
dino_seedwork_be/adapters/persistance/: __init__.py
dino_seedwork_be/adapters/pubsub/: RabbitMQPublisher.py  __init__.py
dino_seedwork_be/adapters/rest/: utils.py
dino_seedwork_be/application/: AbstractApplicationLifeCycle.py  ApplicationLifeCycleUseCase.py  __init__.py  command.py  handler.py  query.py  service.py
dino_seedwork_be/domain/: AbstractDomainEventDict.py  AbstractIdentity.py  AggregateRoot.py  DomainAssertionConcern.py  DomainEvent.py  DomainEventPublisher.py  DomainEventSubscriber.py  DomainService.py  Entity.py  IdentifiedDomainObject.py  IdentifiedValueObject.py  RegexValue.py  __init__.py  aggregates.py  assertion_concern.py  entities.py  exceptions.py  mixins.py  rules.py  services.py  utils.py  validator.py  value_objects.py
dino_seedwork_be/domain/event/: EventSerializer.py  EventStore.py  EventStoreSubscriber.py  StoredEvent.py  __init__.py
dino_seedwork_be/domain/value_object/: AbstractIdentity.py  AbstractValueObject.py  File.py  FullName.py  ImageURL.py  NID.py  RegexValue.py  URL.py  UUID.py  __init__.py
dino_seedwork_be/event/: EventSerializer.py  EventStore.py  StoredEvent.py  __init__.py
dino_seedwork_be/event/persistance/: SqlAlchemyEventStore.py  SqlAlchemyPublishedNotificationTrackerStore.py  __init__.py
dino_seedwork_be/fp/: __init__.py  domain_safe.py  list.py
dino_seedwork_be/implementation/application/: AlchemyApplicationLifeCycle.py  __init__.py
dino_seedwork_be/logic/: __init__.py  assertion_concern.py  validators.py
dino_seedwork_be/media/: AbstractJsonMediaReader.py  RepresentationReader.py  __init__.py
dino_seedwork_be/process/: AbstractProcess.py  AbstractProcessApplicationService.py  ProcessId.py  ProcessTimeOut.py  TimeConstrainedProcessTracker.py  TimeConstrainedProcessTrackerRepository.py  __init__.py  timeout_event_factory.py
dino_seedwork_be/pubsub/: DefaultImplementNotificationApplicationService.py  Notification.py  NotificationPublisher.py  NotificationReader.py  NotificationSerializer.py  PublishedNotificationTracker.py  PublishedNotificationTrackerStore.py  __init__.py
dino_seedwork_be/repository/: IDto.py  IRepository.py  IRepositoryUUID.py  Mapper.py  __init__.py
dino_seedwork_be/serializer/: AbstractSerializer.py  ObjectSerializer.py  Serializable.py  SimpleJSONSerializer.py  __init__.py
dino_seedwork_be/storage/: __init__.py  uow.py
dino_seedwork_be/types/: ReturnType.py  __init__.py
dino_seedwork_be/utils/: __init__.py  compare.py  date.py  dict.py  fakerHelpers.py  faker_helpers.py  functional.py  image.py  isInRange.py  is_in_range.py  list.py  meta.py  noneOrInstance.py  none_or_instance.py  number.py  params.py  set.py  text.py  validator.py  withDefaultValue.py  with_default_value.py
test/adapter/: Filter_test.py  FirebaseNotification_test.py
test/domain/: AggregateRoot_test.py  Entity_test.py  Event_test.py  StringWithRegex_test.py
test/events/: DomainEventPublisher_test.py  EventSerializer_test.py  EventStoreContract_test.py  MockEventStore.py  TestableDomainEvent.py
test/logic/: AssertionConcern_test.py
test/messaging/: ExchangeListener_test.py
test/mock/: MockEventHandlingTracker.py
test/notification/: NotificationReader_test.py  NotificationSerializer_test.py
test/utils/: Functional_test.py  MockRepository_test.py  meta_test.py
(+93 files in other folders)
